Added click highlight functionality to "li" items as well as nodes themselves

--- a/views/trumpworld.html
+++ b/views/trumpworld.html
@@ -33,6 +33,8 @@
 	.d1 {
 		display: inline-block;
 		width: 20%;
+		min-width: 250px;
+		max-width: 350px;
 		right: 0px;
 		height: 100%;
 		overflow: hidden;
@@ -48,18 +50,14 @@
 		overflow:auto;
 	}
 
-	#listDiv {
-		/*display: inline-block;*/
-		/*top: 5px;*/
-		/*vertical-align: middle;*/
-	}
-
 	ul {
 		padding-left: 12px;
 	}
 
 	li {
-  	margin: 10px;
+  	padding-top: 10px;
+  	padding-bottom: 10px;
+  	margin-left: 10px;
   	list-style-type: none;
 	}
 
@@ -92,7 +90,6 @@
 	  display: inline;
 	  stroke: white;
 		text-shadow: #ffffff 0 0 6px, #ffffff 0 0 4px, #ffffff 0 0 2px;
-
 	  /*stroke-width: 20;*/
 	}
 
@@ -114,31 +111,28 @@
 		</div>
 	</div>
 	<script>
-	// To Do
-	// highlight connected links
-	// See if using heroku I can speed up load time of visualization (watch Paul's final video on that)
-	// label connected links and nodes (have simulation run on only connected links/nodes)
-	// label links
-	// use dynamic updates to solve label problem: https://bl.ocks.org/rofrischmann/0de01de85296591eb45a1dde2040c5a1
-	// searchable side bar with alphabetical/connected sort
-	// add some transitions / change colors
-	// Find other rich people to compare this vis with
-	// Fix zoom label stroke
-	// Indicate date that the data was last updated
-	// Way to handle lone nodes
-	// Write javascript function to automatically add any new "entity" categories to the viz
-	// Stroke for the links thiner as one zooms in more
-	// Limit ul div to some pixel size if on a large screen
-	// on click, have lines be 2nd to last element drawn on canvas (1st is the node)
+	//// To Do
 	// on hover over neighbouring node: show relationship label
 	// on hover over beighbour of neighbouring node: show additional relationship
+	// See if using heroku I can speed up load time of visualization (watch Paul's final video on that)
+	// add some transitions / change colors
+	// Fix zoom label stroke
+	// searchable side bar with alphabetical/connected sort
+	//// color labels by entity type
+	// make sure lines connected to neighbouring nodes aren't covered by non-neighbouring node circles
+	//// on click, have lines be 2nd to last element drawn on canvas (1st is the node)
+	// Stroke for the links thiner as one zooms in more
+	//
+	// use dynamic updates to solve label problem: https://bl.ocks.org/rofrischmann/0de01de85296591eb45a1dde2040c5a1
+	// Write javascript function to automatically add any new "entity" categories to the viz
+	// Find other rich people to compare this vis with
+	// Indicate date that the data was last updated
+	// Way to handle lone nodes
 
 
 		var marginRightSize = (20 / 100) * window.innerWidth;
 
 		var margin = {top: 0, right: marginRightSize, bottom: 0, left: 0},
-			// width = window.innerWidth - margin.left - margin.right,
-			// height = window.innerHedth - margin.left - margin.right,
 			width = window.innerWidth - margin.left - margin.right,
 			height = window.innerHeight - margin.top - margin.bottom;
 
@@ -162,7 +156,7 @@
 			.on("click", function(){
 				if (d3.event.target === this) {
 					// clear any "onClick" styles for nodes
-	 				d3.selectAll(".nodes")
+	 				d3.selectAll(".nodes").classed("selectedNode", false)
 	 					.select(".nodeCircle")
 	 					.style("stroke", "white")
 	 					.style("fill-opacity", 1);
@@ -194,6 +188,7 @@
 			.force("y", d3.forceY(height / 2));
 
 	  var color = d3.scaleOrdinal(d3.schemeCategory10);
+	  // console.log(d3.schemeCategory10);
 
 	  queue()
 	  	.defer(d3.csv, "https://raw.githubusercontent.com/BuzzFeedNews/trumpworld/master/data/trumpworld.csv")
@@ -328,7 +323,6 @@
 			var node = gContainer.selectAll(".nodes")
 				.data(graph.nodes)
 			 .enter().append("g")
-				// .attr("class", "nodes")
 				.attr("class", function(d) { return "nodes T" + slug(d.id); })
 				.on("mouseover", function() {
 						this.parentNode.appendChild(this);
@@ -353,7 +347,6 @@
 
 			var zoomEvent = d3.zoom().scaleExtent([0.1, 9]).on("zoom", function () {
 				gContainer.attr("transform", d3.event.transform)
-
 				// console.log(d3.event.transform);
 				// console.log(max_text_size);
 
@@ -371,7 +364,6 @@
 			    if (text_size / 7.5 > max_labelStroke) labelStroke = max_labelStroke / d3.event.transform.k;
 			    labelShadow.style("stroke-width", labelStroke);
 			    // console.log("labelStroke: " + labelStroke);
-
 					// console.log(text_size);
 					// console.log(text_size / 10);
 
@@ -396,6 +388,7 @@
 	 			.attr("class", "clip-path-circle");
 
 	 		var clickHilightColor = "rgb(52, 255, 38)"
+	 		// var clickHilightColor = "purple"
 
 	 		var ul = d3.select("#listDiv").append("ul")
 	 			.selectAll("li")
@@ -408,9 +401,16 @@
 	 				var correspondingNodeSelection = d3.selectAll("." + mouseClass);
 	 				var correspondingNode = correspondingNodeSelection.nodes()[1];
 					correspondingNode.parentNode.appendChild(correspondingNode);
-					d3.selectAll("." + mouseClass).selectAll(".nodeCircle")
-						.style("fill", "white")
-						.style("stroke", function(d) { return color(d.type) });
+					console.log(correspondingNode);
+					if (d3.select(correspondingNode).attr("class").split(" ").includes("selectedNode")) {
+						d3.select(correspondingNode).select(".nodeCircle")
+							.style("stroke", clickHilightColor)
+							.style("fill", "white");
+					} else {
+						d3.select(correspondingNode).select(".nodeCircle")
+							.style("stroke", function(d) { return color(d.type) })
+							.style("fill", "white");
+					}
 					d3.selectAll("." + mouseClass).select(".label")
  						.style("display", "inline")
  						.style("text-shadow", "#ffffff 0 0 6px, #ffffff 0 0 4px, #ffffff 0 0 2px");
@@ -420,9 +420,19 @@
 	 			})
 	 			.on("mouseleave", function () {
 	 				var mouseClass = d3.select(this).attr("class");
-					d3.selectAll("." + mouseClass).selectAll(".nodeCircle")
-						.style("fill", function(d) { return color(d.type) })
-						.style("stroke", "white");
+	 				var correspondingNodeSelection = d3.selectAll("." + mouseClass);
+	 				var correspondingNode = correspondingNodeSelection.nodes()[1];
+					correspondingNode.parentNode.appendChild(correspondingNode);
+					console.log(correspondingNode);
+					if (d3.select(correspondingNode).attr("class").split(" ").includes("selectedNode")) {
+						d3.select(correspondingNode).select(".nodeCircle")
+							.style("stroke", clickHilightColor)
+							.style("fill", function(d) { return color(d.type) })
+					} else {
+						d3.select(correspondingNode).select(".nodeCircle")
+							.style("fill", function(d) { return color(d.type) })
+							.style("stroke", "white");
+					}
 					d3.selectAll("." + mouseClass).select(".label")
  						.style("display", "none")
  						.style("text-shadow", "none");
@@ -430,53 +440,40 @@
  						.style("display", "none")
  						.style("stroke", "white");
 	 			})
-
-	 			////////////////
-
 	 			.on("click", function(d) {
 	 				var clickClass = d3.select(this).attr("class");
 	 				var correspondingNodeSelection = d3.selectAll("." + clickClass);
 	 				var correspondingNode = correspondingNodeSelection.nodes()[1];
 	 				// clear any "onClick" styles for nodes
-	 				d3.selectAll(".nodes")
+	 				d3.selectAll(".nodes").classed("selectedNode", false)
 	 					.select(".nodeCircle")
 	 					.style("stroke", "white")
-	 					.style("fill-opacity", .2);
+	 					.style("fill-opacity", .15);
 	 				// clear any "onClick" styles for links
 	 				d3.selectAll(".lines")
 	 					.style("stroke", "grey")
-	 					.style("stroke-opacity", .2);
-
-	 				// console.log(d);
+	 					.style("stroke-opacity", .15);
 
 	 				var isNeighbour = links.reduce(function (neighbours, link) {
 	 					if (link.target.id === d) {
 	 						neighbours.push(link.source.id);
-	 							 						// console.log("n1", neighbours);
 	 					} else if (link.source.id === d) {
 	 						neighbours.push(link.target.id);
-	 						// console.log("n2", neighbours);
 	 					} return neighbours;
 	 				}, [d]);
 
 	 				d3.selectAll(".nodes")
-	 					// .selectAll(".nodeCircle")
-	 					// .style("fill", "#000000");
 	 					.classed("neighbouringNodeCircles", function(e) {
-	 						// console.log(e.id);
-	 						if (isNeighbour.includes(e.id)) { 
-	 							console.log(e.id, " is classed true");
+	 						if (isNeighbour.includes(e.id)) {
 	 							return true;
 	 						}
 	 					});
-
-	 				d3.select(correspondingNode).select(".nodeCircle")
-	 					.style("stroke", function(d) { return color(d.type) });
-
+	 				d3.select(correspondingNode).classed("selectedNode", true)
+	 					.select(".nodeCircle")
+	 					.style("stroke", clickHilightColor);
  					d3.selectAll(".neighbouringNodeCircles")
  						.select(".nodeCircle")
  						.style("fill-opacity", 1);
-
 	 				d3.selectAll(".lines")
 	 					.classed("neighbouringLines", function(e) {
 	 						if (e.source.id === d) {
@@ -485,14 +482,9 @@
 	 							return true;
 	 						};
 	 					});
-	 					
 	 					d3.selectAll(".neighbouringLines")
-	 					// .style("stroke", clickHilightColor);
 	 					.style("stroke-opacity", 1);
-
 	 			}); // on click callback
-
-	 			////////////////
 
 	 		var circleCatcher = node.append("circle")
 	 			.attr("r", 30)
@@ -502,19 +494,21 @@
 	 			.style("stroke", "none")
 	 			.attr("clip-path", function(d) { return "url(#clip-" + slug(d.id) + ")"; })
 	 			.on("mouseover", function () {
-
 	 				d3.select(this.parentNode).select(".label")
 	 					.style("display", "inline")
  						.style("text-shadow", "#ffffff 0 0 6px, #ffffff 0 0 4px, #ffffff 0 0 2px");
-
 	 				d3.select(this.parentNode).select(".labelShadow")
 	 					.style("display", "inline")
  						.style("stroke", "white");
-
+ 					if (d3.select(this.parentNode).attr("class").split(" ").includes("selectedNode")) {
+	 						d3.select(this.parentNode).select(".nodeCircle")
+	 						.style("stroke", "clickHilightColor")
+	 						.style("fill", "white");
+	 				} else {
 	 				d3.select(this.parentNode).select(".nodeCircle")
 	 					.style("fill", "white")
 						.style("stroke", function(d) { return color(d.type) })
-					// .style("stroke-width", 5)
+					}
 	 			})
 	 			.on("mouseleave", function () {
 	 				d3.select(this.parentNode).select(".label")
@@ -523,53 +517,46 @@
 	 				d3.select(this.parentNode).select(".labelShadow")
 	 					.style("display", "none")
  						.style("stroke", "white");
-	 				if (d3.select(this.parentNode).attr("class").split(" ").includes("neighbouringNodeCircles")) {
+	 				if (d3.select(this.parentNode).attr("class").split(" ").includes("selectedNode")) {
+	 						d3.select(this.parentNode).select(".nodeCircle")
+	 						.style("stroke", "clickHilightColor")
+	 						.style("fill", function(d) { return color(d.type) });
+	 				} else {
 	 					d3.select(this.parentNode).select(".nodeCircle")
 	 					.style("stroke", "white")
 	 					.style("fill", function(d) { return color(d.type) });
-	 				} else {
-	 					d3.select(this.parentNode).select(".nodeCircle")
-	 				.style("stroke", "white")
-					.style("fill", function(d) { return color(d.type) });
 	 				}
 	 			})
 	 			.on("click", function(d) { 
 	 				// clear any "onClick" styles for nodes
-	 				d3.selectAll(".nodes")
+	 				d3.selectAll(".nodes").classed("selectedNode", false)
 	 					.select(".nodeCircle")
 	 					.style("stroke", "white")
-	 					.style("fill-opacity", .2);
+	 					.style("fill-opacity", .15);
 	 				// clear any "onClick" styles for links
 	 				d3.selectAll(".lines")
 	 					.style("stroke", "grey")
-	 					.style("stroke-opacity", .2);
-
+	 					.style("stroke-opacity", .15);
 	 				var isNeighbour = links.reduce(function (neighbours, link) {
 	 					if (link.target.id === d.id) {
 	 						neighbours.push(link.source.id);
-	 						// console.log(neighbours);
 	 					} else if (link.source.id === d.id) {
 	 						neighbours.push(link.target.id)
 	 					} return neighbours;
 	 				}, [d.id])
-
 	 				d3.selectAll(".nodes")
 	 					.classed("neighbouringNodeCircles", function(e) {
 	 						if (isNeighbour.includes(e.id)) { 
 	 							return true;
 	 						}
 	 					});
-
-	 				d3.select(this.parentNode).select(".nodeCircle")
-	 					.style("stroke", function(d) { return color(d.type) });
-	 					// .style("stroke", clickHilightColor);
-
+	 				d3.select(this.parentNode)
+	 					.classed("selectedNode", true)
+	 					.select(".nodeCircle")
+	 					.style("stroke", clickHilightColor);
  					d3.selectAll(".neighbouringNodeCircles")
  						.select(".nodeCircle")
- 						// .style("stroke", function(d) { return color(d.type) })
- 						// .style("stroke", clickHilightColor)
  						.style("fill-opacity", 1);
-
 	 				d3.selectAll(".lines")
 	 					.classed("neighbouringLines", function(e) {
 	 						if (e.source.id === d.id) {
@@ -578,11 +565,8 @@
 	 							return true;
 	 						};
 	 					});
-	 					
 	 					d3.selectAll(".neighbouringLines")
-	 					// .style("stroke", clickHilightColor);
 	 					.style("stroke-opacity", 1);
-
 	 			}); // on click callback
 
 			d3.timeout(function() {
