finalized conditional hover styles for nodes

--- a/views/trumpworld.html
+++ b/views/trumpworld.html
@@ -3,8 +3,8 @@
 
 <head>
 	<title>Trump World</title>
-	<!-- <script src="d3.js" charset="utf-8"></script> -->
-	<!-- <script src="queue.min.js"></script> -->
+<!-- 	<script src="d3.js" charset="utf-8"></script>
+	<script src="queue.min.js"></script> -->
 	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
 </head>
@@ -122,6 +122,10 @@
 	// make sure lines connected to neighbouring nodes aren't covered by non-neighbouring node circles
 	//// on click, have lines be 2nd to last element drawn on canvas (1st is the node)
 	// Stroke for the links thiner as one zooms in more
+	// zoom to selection
+	// fix listing for W.E.“ED” BOSARGE
+	// fix no circle catcher for INVESTCOLTD (update: there's a duplicate)
+	// fill color of hovered node (whie another node is selected) should indicate entity type
 	//
 	// use dynamic updates to solve label problem: https://bl.ocks.org/rofrischmann/0de01de85296591eb45a1dde2040c5a1
 	// Write javascript function to automatically add any new "entity" categories to the viz
@@ -396,12 +400,12 @@
 	 			.enter().append("li")
 	 			.attr("class", function(d) { return "T" + slug(d) })
 	 			.html(String)
+
 	 			.on("mouseover", function() {
 	 				var mouseClass = d3.select(this).attr("class");
 	 				var correspondingNodeSelection = d3.selectAll("." + mouseClass);
 	 				var correspondingNode = correspondingNodeSelection.nodes()[1];
 					correspondingNode.parentNode.appendChild(correspondingNode);
-					console.log(correspondingNode);
 					if (d3.select(correspondingNode).attr("class").split(" ").includes("selectedNode")) {
 						d3.select(correspondingNode).select(".nodeCircle")
 							.style("stroke", clickHilightColor)
@@ -418,12 +422,13 @@
  						.style("display", "inline")
  						.style("stroke", "white");
 	 			})
+
 	 			.on("mouseleave", function () {
 	 				var mouseClass = d3.select(this).attr("class");
 	 				var correspondingNodeSelection = d3.selectAll("." + mouseClass);
 	 				var correspondingNode = correspondingNodeSelection.nodes()[1];
 					correspondingNode.parentNode.appendChild(correspondingNode);
-					console.log(correspondingNode);
+					
 					if (d3.select(correspondingNode).attr("class").split(" ").includes("selectedNode")) {
 						d3.select(correspondingNode).select(".nodeCircle")
 							.style("stroke", clickHilightColor)
@@ -440,6 +445,7 @@
  						.style("display", "none")
  						.style("stroke", "white");
 	 			})
+
 	 			.on("click", function(d) {
 	 				var clickClass = d3.select(this).attr("class");
 	 				var correspondingNodeSelection = d3.selectAll("." + clickClass);
@@ -453,7 +459,6 @@
 	 				d3.selectAll(".lines")
 	 					.style("stroke", "grey")
 	 					.style("stroke-opacity", .15);
-
 	 				var isNeighbour = links.reduce(function (neighbours, link) {
 	 					if (link.target.id === d) {
 	 						neighbours.push(link.source.id);
@@ -493,24 +498,66 @@
 	 			.style("fill-opacity", 0)
 	 			.style("stroke", "none")
 	 			.attr("clip-path", function(d) { return "url(#clip-" + slug(d.id) + ")"; })
-	 			.on("mouseover", function () {
+
+	 			.on("mouseover", function (d) {
+
+	 				var hoveredNode = d
+	 				var hoveredNodeID = "T" + slug(hoveredNode.id)
+
+	 				// add selectConnect class to links connecting hovered node with slected node
+	 				d3.selectAll(".neighbouringLines")
+	 					.classed("selectConnect", function(d) {
+	 						var selectedNodeID = d3.selectAll(".selectedNode").attr("class").split(" ")[1]
+	 						var linkSource = "T" + slug(d.source.id)
+	 						var linkTarget = "T" + slug(d.target.id)
+	 					if (selectedNodeID === linkSource && hoveredNodeID === linkTarget) {
+	 						return true;
+	 					} else if (selectedNodeID === linkTarget && hoveredNodeID === linkSource) {
+	 						return true;
+	 					}	 						
+	 				});
+
+	 				// style selectConnect link
+	 				d3.selectAll(".selectConnect")
+	 					.style("stroke", clickHilightColor)
+	 					.each(
+	 						function(d) {
+	 							var slugSource = "T" + slug(d.source.id);
+	 							var slugTarget = "T" + slug(d.target.id);
+	 							var selCon = d3.select(".selectConnect");
+	 							selCon.classed(slugSource, true);
+	 							selCon.classed(slugTarget, true);
+	 						}
+ 						);
+
+	 				// style labels on hover
 	 				d3.select(this.parentNode).select(".label")
 	 					.style("display", "inline")
  						.style("text-shadow", "#ffffff 0 0 6px, #ffffff 0 0 4px, #ffffff 0 0 2px");
 	 				d3.select(this.parentNode).select(".labelShadow")
 	 					.style("display", "inline")
  						.style("stroke", "white");
+
+ 					// style hovered nodes conditionally
  					if (d3.select(this.parentNode).attr("class").split(" ").includes("selectedNode")) {
 	 						d3.select(this.parentNode).select(".nodeCircle")
-	 						.style("stroke", "clickHilightColor")
+	 						.style("stroke", clickHilightColor)
+	 						.style("fill", function(d) { return color(d.type) });
+	 				} else if (d3.select(".selectConnect")["_groups"][0][0] === null) {
+	 					d3.select(this.parentNode).select(".nodeCircle")
+	 						.style("stroke", function(d) { return color(d.type) })
 	 						.style("fill", "white");
-	 				} else {
-	 				d3.select(this.parentNode).select(".nodeCircle")
-	 					.style("fill", "white")
-						.style("stroke", function(d) { return color(d.type) })
-					}
-	 			})
+	 				} else if (d3.select(".selectConnect").attr("class").split(" ").includes(hoveredNodeID)) {
+	 					d3.select(this.parentNode).select(".nodeCircle")
+	 						.style("stroke", clickHilightColor)
+	 						.style("fill", function(d) { return color(d.type) });
+	 				}
+	 			}) // on mouseover callback
+
 	 			.on("mouseleave", function () {
+	 				d3.selectAll(".neighbouringLines")
+	 					.classed("selectConnect", false)
+	 					.style("stroke", "grey");
 	 				d3.select(this.parentNode).select(".label")
 	 					.style("display", "none")
  						.style("text-shadow", "none");
@@ -527,7 +574,8 @@
 	 					.style("fill", function(d) { return color(d.type) });
 	 				}
 	 			})
-	 			.on("click", function(d) { 
+
+	 			.on("click", function(d) {
 	 				// clear any "onClick" styles for nodes
 	 				d3.selectAll(".nodes").classed("selectedNode", false)
 	 					.select(".nodeCircle")
@@ -537,6 +585,7 @@
 	 				d3.selectAll(".lines")
 	 					.style("stroke", "grey")
 	 					.style("stroke-opacity", .15);
+
 	 				var isNeighbour = links.reduce(function (neighbours, link) {
 	 					if (link.target.id === d.id) {
 	 						neighbours.push(link.source.id);
@@ -544,19 +593,23 @@
 	 						neighbours.push(link.target.id)
 	 					} return neighbours;
 	 				}, [d.id])
+
 	 				d3.selectAll(".nodes")
 	 					.classed("neighbouringNodeCircles", function(e) {
 	 						if (isNeighbour.includes(e.id)) { 
 	 							return true;
 	 						}
 	 					});
+
 	 				d3.select(this.parentNode)
 	 					.classed("selectedNode", true)
 	 					.select(".nodeCircle")
 	 					.style("stroke", clickHilightColor);
+
  					d3.selectAll(".neighbouringNodeCircles")
  						.select(".nodeCircle")
  						.style("fill-opacity", 1);
+
 	 				d3.selectAll(".lines")
 	 					.classed("neighbouringLines", function(e) {
 	 						if (e.source.id === d.id) {
@@ -565,6 +618,7 @@
 	 							return true;
 	 						};
 	 					});
+
 	 					d3.selectAll(".neighbouringLines")
 	 					.style("stroke-opacity", 1);
 	 			}); // on click callback
